# libmbim

./: .gitlab-ci.yml  NEWS  RELEASING  configure.ac  meson.build  meson_options.txt  meson_post_install.py
build-aux/mbim-codegen/: Struct.py  mbim-codegen  utils.py
data/: Makefile.am  mbim-service-intel-at-tunnel.json  mbim-service-quectel.json  mbim-service-sms.json
docs/reference/libmbim-glib/: Makefile.am  libmbim-glib-common.sections  libmbim-glib-docs.xml  meson.build
src/libmbim-glib/: 76-mbim-device-group.rules.in  libmbim-glib.h  mbim-cid.c  mbim-cid.h  mbim-compat.c  mbim-compat.h  mbim-device.c  mbim-device.h  mbim-enums.h  mbim-helpers.c  mbim-helpers.h  mbim-message.c  mbim-net-port-manager.c  mbim-proxy.c  mbim-tlv.c  mbim-utils.c  mbim-uuid.c  mbim-uuid.h  mbim-version.h.in  meson.build
src/libmbim-glib/test/: test-uuid.c
src/mbimcli/: Makefile.am  mbimcli-atds.c  mbimcli-basic-connect.c  mbimcli-dss.c  mbimcli-helpers-quectel.c  mbimcli-helpers-quectel.h  mbimcli-intel-at-tunnel.c  mbimcli-ms-firmware-id.c  mbimcli-ms-host-shutdown.c  mbimcli-phonebook.c  mbimcli-quectel.c  mbimcli-sms.c  mbimcli.c  mbimcli.h  meson.build
src/mbimcli/tests/: meson.build  test-quectel.c
utils/: mbim-network.in
